packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-16/reproducer.js
var ProgressReporter = function () {

  this.onInput = function() {
    this.values.push(42); // Noncompliant: this.values can be undefined
  }

  this.onStart = function() {
    this.values = [];
  }
}

var pr = new ProgressReporter();
pr.onInput();
